*Empty MediaWiki Message*

--- a/Коми_гижысьяс_анбур_серти.mw
+++ b/Коми_гижысьяс_анбур_серти.mw
@@ -3,7 +3,7 @@
 Медводзза лыддьӧгас [[Коми Республика]]са коми гижысьяс, мӧдас [[перым коми литература|перым коми]] гижысьяс.
 
 ==Коми Республикаса коми гижысьяс==
-Коми Республикаса гижысьяс гижӧны [[Миян коми кыв|комиӧн]] миян ног, сыктывкарса коми кыв стандарт серти.
+Коми Республикаса гижысьяс гижӧны [[Коми кыв|комиӧн]] миян ног, сыктывкарса коми кыв стандарт серти.
 
 {| border="1" cellpadding="4" cellspacing="0" style="border:1px solid #aaa; border-collapse:collapse"
 |- bgcolor="#ECECEC"
