*Empty MediaWiki Message*

--- a/Юхнин_Василий_Васильевич.mw
+++ b/Юхнин_Василий_Васильевич.mw
@@ -1,4 +1,6 @@
-'''Юхнин Василей Василей''' ([[Роч кыв|роч]] ''Юхнин Василий Васильевич'') (12.01.1907 – 23.11.1960) чужис [[Вöлöгда губерния|Вöлöгда губерниялöн]] [[Усть-Сысольск уезд|Усть–Сысольск уездса]] Занулльӧ сиктын (öнi [[Коми Республика|Коми Республикаса]] [[Луздор район]]). 
+'''Юхнин Василий Васильевич''' ([[коми кыв|коми]]ӧн ''Луздор Вась'', ''Öнчу Вась'', 12.01.1907 – 23.11.1960) - [[коми гижысьяс анбур серти|коми гижысь]].
+
+Луздор Вась чужис [[Вöлöгда губерния|Вöлöгда губерниялöн]] [[Усть-Сысольск уезд|Усть–Сысольск уездса]] Занулльӧ сиктын (öнi [[Коми Республика|Коми Республикаса]] [[Луздор район]]). 
 
 Литератураын [[сайним]] - Луздор Вась.
 
