*Empty MediaWiki Message*

--- a/Коми_гижысьяс_анбур_серти.mw
+++ b/Коми_гижысьяс_анбур_серти.mw
@@ -37,7 +37,7 @@
 |[[Безносиков Владимир Иванович]]	
 |1927	
 |-
-|[[Белых Иван Федорович]] (Б.Ильин)	
+|[[Белых Иван Ильич]] (Б.Ильин)	
 |1946	
 |-
 |[[Белых Николай Федорович]]	
