*Empty MediaWiki Message*

--- a/Бутырева_Галина_Васильевна.mw
+++ b/Бутырева_Галина_Васильевна.mw
@@ -1,4 +1,4 @@
-'''Бутырева, Галина Васильевна''' (комиӧн - '''Вась Галя''') ([[1944]]) - [[коми гижысь]], [[Коми Республикаса культураын заслуженнӧй уджалысь]], Россияса [[Гижысь котыр]]ӧ да [[Журналист котыр]]ӧ пырысь, [["Арт"]] журналлӧн шӧр редактор ([[1997]]).
+'''Бутырева, Галина Васильевна''' (комиӧн - '''Вась Галя''') ([[1944]]) - [[коми гижысьяс анбур серти|коми гижысь]], [[Коми Республикаса культураын заслуженнӧй уджалысь]], Россияса [[Гижысь котыр]]ӧ да [[Журналист котыр]]ӧ пырысь, [["Арт"]] журналлӧн шӧр редактор ([[1997]]).
 
 == Олан туй==
 * [[1944]] [[12 кӧч|кӧч 12 лун]] - чужис [[Удора район]]са [[Ёртома]] [[сикт]]ын.
