*Empty MediaWiki Message*

--- a/Коми_гижысьяс_анбур_серти.mw
+++ b/Коми_гижысьяс_анбур_серти.mw
@@ -79,7 +79,7 @@
 |[[Гордеева Антонина]]	
 |1960	
 |-
-|[[Горчаков Геннадий Дмитриевич]] (Гений Горчаков)	
+|[[Горчаков Гений Дмитриевич|Горчаков Геннадий Дмитриевич]] (Гений Горчаков)	
 |1927	
 |-
 |[[Грабежова Валентина Михайловна]]	
