*Empty MediaWiki Message*

--- a/Коми_гижысьяс_анбур_серти.mw
+++ b/Коми_гижысьяс_анбур_серти.mw
@@ -190,7 +190,7 @@
 |[[Куратов Виталий Константинович]]	
 |1933-2003	
 |-
-|[[Куратов Иван Алексеевич]]	
+|[[Куратов Ӧльӧш Вань|Куратов Иван Алексеевич]]	
 |1839–1875	
 |-
 |[[Куратова Нина Ильинична]]	
