*Empty MediaWiki Message*

--- a/Куратова_Нина_Никитична.mw
+++ b/Куратова_Нина_Никитична.mw
@@ -1,4 +1,4 @@
-'''Куратова Микит Нина''' (рочӧн – Нина Никитична) ([[1930]]) – [[коми гижысь]], [[СССР-са гижысь котырӧ]] пырысь ([[1978]]), [[Коми Республика йӧзкостса гижысь]] ([[2001]]).
+'''Куратова Нина Никитична ''' ([[коми кыв|коми]]ӧн '''Микит Нина''', ([[1930]]) – [[коми гижысьяс анбур серти|коми гижысь]], [[СССР-са гижысь котырӧ]] пырысь ([[1978]]), [[Коми Республика йӧзкостса гижысь]] ([[2001]]).
 
 ==Олан туй== 
 * [[1930]], [[17 урасьӧм|урасьöм тӧлысь 17-öд лунö]] – чужис Кебра [[грезд]]ын, öнiя [[Куратов (Сыктыв район)|Куратов]] [[сикт]]. 
