--- a/Лебедев_Микӧл_Микайлӧ.mw
+++ b/Лебедев_Микӧл_Микайлӧ.mw
@@ -1,10 +1,18 @@
-'''Лебедев Микӧл Микайлӧ''' (''Лебедев Михаил Николаевич'') (22.10.1877 – 5.03.1951) чужис [[Вӧлӧгда губерния|Вӧлӧгда губерниялӧн]] [[Усть–Сысольск уезд|Усть–Сысольск уездса]] [[Межадор]] сиктын (ӧні [[Коми Республика|Коми Республикаса]] [[Сыктыв район]]). Велӧдчис Усть–Сысольскса уезднӧй училищеын, уджаліс [[Кӧрткерӧс|Кӧрткерӧсын]] да [[Покча|Покчаын]] писарлы отсасьысьӧн. Сӧвет власьт пуксьӧм бӧрын волі секретарӧн Кӧрткерӧсса гӧльяслӧн комитетын да судын. Унджык кадсӧ оліс Кӧрткерӧсын.
-Михаил Лебедев – выль коми литератураын подув пуктысьяс пиысь ӧти. Гижны босьтчис дас куим арӧсӧн. Тӧдса кыдз поэт, прозаик да драматург. Медводдза повесьтьяссӧ "За богом молитва, за царем служба не пропадут", "Последние дни Перми Великой", "Таня Осинина", "Среди медведей" гижліс роч кыв вылын. 1917–ӧд вося октябрь революцияӧдз на кутіс лӧсьӧдавны кывбуръяс комиӧн. Бура тӧдіc коми йӧзкостса висьтъяс. Та подув вылын коми йӧзлӧн важ олӧм йылысь лӧсьӧдiс поэма–мойдъяс "Кӧрт Айка" да "Яг морт". Басняясас серавліс юысьясӧс да дышъясӧс. М. Лебедев гижліс и челядьлы. Сійӧ лӧсьӧдіc коми литератураын выль жанр – оперетка. Гижысьлысь "Мича ныв", "Тун" да "Настук" опереткаяссö сувтöдлicны сцена вылын.
+Лебедев Михаил Николаевич ([[коми кыв|коми]]ӧн ''' Микӧл Микайлӧ''', 22.10.1877 – 5.03.1951) 
+
+М.Н. Лебедев чужис [[Вӧлӧгда губерния|Вӧлӧгда губерниялӧн]] [[Усть–Сысольск уезд|Усть–Сысольск уездса]] [[Межадор]] сиктын (ӧні [[Коми Республика|Коми Республикаса]] [[Сыктыв район]]). Велӧдчис Усть–Сысольскса уезднӧй училищеын, уджаліс [[Кӧрткерӧс|Кӧрткерӧсын]] да [[Покча|Покчаын]] писарлы отсасьысьӧн. Сӧвет власьт пуксьӧм бӧрын волі секретарӧн Кӧрткерӧсса гӧльяслӧн комитетын да судын. Унджык кадсӧ оліс Кӧрткерӧсын.
+
+Михаил Лебедев – выль коми литератураын подув пуктысьяс пиысь ӧти. Гижны босьтчис дас куим арӧсӧн. Тӧдса кыдз поэт, прозаик да драматург. Медводдза повесьтьяссӧ "За богом молитва, за царем служба не пропадут", "Последние дни Перми Великой", "Таня Осинина", "Среди медведей" гижліс роч кыв вылын. 1917–ӧд вося октябрь революцияӧдз на кутіс лӧсьӧдавны кывбуръяс комиӧн. Бура тӧдіc коми йӧзкостса висьтъяс. Та подув вылын коми йӧзлӧн важ олӧм йылысь лӧсьӧдiс поэма–мойдъяс "Кӧрт Айка" да "Яг морт". Басняясас серавліс юысьясӧс да дышъясӧс. М. Лебедев гижліс и челядьлы. Сійӧ лӧсьӧдіc коми литератураын выль жанр – оперетка. 
+
+Гижысьлысь "Мича ныв", "Тун" да "Настук" опереткаяссö сувтöдлicны сцена вылын.
+
 1939–ӧд воын литератураын ыджыд уджысь М. Н. Лебедевлы вӧлі сетӧма "Знак Почета" орден.
+
 Дзебӧма Кӧрткерӧсын.
 
 [[Категория:Персоналия:Коми]]
 [[Категория:Персоналия анбурӧд]]
+[[Категория:Коми гижысь]]
 
 [[fi:Mihail Nikolajevitš Lebedev]]
 [[kk:Михаил Николаевич Лебедев]]
