*Empty MediaWiki Message*

--- a/Лебедев_Михаил_Николаевич.mw
+++ b/Лебедев_Михаил_Николаевич.mw
@@ -1,4 +1,4 @@
-'''Лебедев Михаил Николаевич''' ([[коми кыв|коми]]ӧн ''' Микӧл Микайлӧ''', 22.10.1877 – 5.03.1951) 
+'''Лебедев Михаил Николаевич''' ([[коми кыв|коми]]ӧн ''' Микӧл Микайлӧ''', 22.10.1877 – 5.03.1951) - [[коми гижысьяс анбур серти|коми гижысь]], поэт.
 
 М.Н. Лебедев чужис [[Вӧлӧгда губерния|Вӧлӧгда губерниялӧн]] [[Усть–Сысольск уезд|Усть–Сысольск уездса]] [[Межадор]] сиктын (ӧні [[Коми Республика|Коми Республикаса]] [[Сыктыв район]]). Велӧдчис Усть–Сысольскса уезднӧй училищеын, уджаліс [[Кӧрткерӧс|Кӧрткерӧсын]] да [[Покча|Покчаын]] писарлы отсасьысьӧн. Сӧвет власьт пуксьӧм бӧрын волі секретарӧн Кӧрткерӧсса гӧльяслӧн комитетын да судын. Унджык кадсӧ оліс Кӧрткерӧсын.
 
