*Empty MediaWiki Message*

--- a/Мишарина_Александра_Петровна.mw
+++ b/Мишарина_Александра_Петровна.mw
@@ -1,4 +1,4 @@
-'''Мишарина Петыр Саньӧ''' (рочӧн - '''Александра Петровна''') ([[1946]]) - [[коми гижысь]].
+'''Мишарина Александра Петровна ''' ([[коми кыв|коми]]ӧн - '''Петыр Саньӧ''', [[1946]]) - [[коми гижысьяс анбур серти|коми гижысь]].
 
 ==Олан туй==
 * [[1946]], [[19 ӧшым|ӧшым тӧлысь 19 лун]] - чужис [[Кӧрткерӧс район]]са [[Ыджыдвидз (Кӧрткерӧс район)|Ыджыдвидз]] [[сикт]]ын.
