*Empty MediaWiki Message*

--- a/Рассыхаев_Василий_Николаевич.mw
+++ b/Рассыхаев_Василий_Николаевич.mw
@@ -1,4 +1,4 @@
-[[Файл:Рассыхаев В.Н. 4.jpg|250 px|right|thumb|Рассыхаев Василий Николаевич (1922–1990) – коми актёр, Коми АССР-са народнöй артист (1971)]]
+[[Файл:Рассыхаев В.Н. 4.jpg|250 px|right|thumb|Рассыхаев Василий Николаевич (1922–1990) – коми актёр да гижысь, Коми АССР-са народнöй артист (1971)]]
 [[Файл:Рассыхаев В.Н. 2.jpg|250 px|right|thumb|Коми гижысь Егор Рочевлӧн «Сöстöм ёльяс», ворсöны Василий Рассыхаев да Михаил Красильников]]
 [[Файл:Рассыхаев В.Н. 3.jpg|250 px|right|thumb|Рассыхаев Василий Николаевич (1922–1990) – коми актёр]]
 
@@ -35,3 +35,4 @@
 
 [[Категория:Персоналия:Коми]]
 [[Категория:Коми ворсысьяс]]
+[[Категория:Коми гижысьяс]]
