*Empty MediaWiki Message*

--- a/Рочев_Яков_Митрофанович.mw
+++ b/Рочев_Яков_Митрофанович.mw
@@ -1,4 +1,4 @@
-'''Рочев Митрук Як''' (рочӧн - '''Яков Митрофанович''') ([[1909]]-[[1977]]) - [[коми гижысь]], [[СССР]]-са [[Гижысь котыр]]ӧ пырысь.
+'''Рочев Яков Митрофанович''' ([[коми]]ӧн - '''Митрук Як'''), [[1909]]-[[1977]]) - [[коми гижысьяс анбур серти|коми гижысь]], [[СССР]]-са [[Гижысь котыр]]ӧ пырысь.
 
 == Олан туй==
 * [[1909]], [[23 тӧв шӧр|тӧвшӧр тӧлысь 23 лун]] - чужис [[Сӧснагорт район|Пожӧмакар район]]са [[Уквавом]] [[сикт]]ын.
