*Empty MediaWiki Message*

--- a/Тимин_Владимир_Васильевич.mw
+++ b/Тимин_Владимир_Васильевич.mw
@@ -1,4 +1,4 @@
-'''Тимин Игӧ Вась Володь''' (рочӧн – '''Владимир Васильевич''') – [[коми гижысь]], [[Россияса гижысь котыр]]ӧ пырысь ([[]]), [[Коми Республикаса народнӧй гижысь]] ([[]]), [[Россияса культураын заслуженнӧй уджалысь]] ([[]]), [[Коми Республикаса культураын заслуженӧй уджалысь]] ([[]]).
+'''Тимин Владимир Васильевич ''' ([[коми кыв|коми]]ӧн – '''Игӧ Вась Володь''') – [[коми гижысьяс анбур серти|коми гижысь]], [[Россияса гижысь котыр]]ӧ пырысь ([[]]), [[Коми Республикаса народнӧй гижысь]] ([[]]), [[Россияса культураын заслуженнӧй уджалысь]] ([[]]), [[Коми Республикаса культураын заслуженӧй уджалысь]] ([[]]).
 
 ==Олан туй==
 * [[1937]] [[2 сора|сора тöлысь 2 лунӧ]] – чужис [[Сыктывдін район]]ысь [[Паджга сикт овмӧдчӧмин]]ӧ пырысь [[Гаръя (Сыктывдін район)|Гаръя]] [[грезд]]ын.
