*Empty MediaWiki Message*

--- a/Торопов_Иван_Григорьевич.mw
+++ b/Торопов_Иван_Григорьевич.mw
@@ -1,4 +1,4 @@
-'''Торопов Гриш Вань''' ({{lang-ru|Иван Григорьевич Торопов}}) ([[1928]] вося [[27 моз|моз 27 лун]], [[Койгорт]] - [[2011 во]]ся [[21 кос му|косму 21]] лун, [[Сыктывкар]]) - [[Коми Республика]]са нимйöза гижысь, Коми Республикаса культураын нимöдана уджалысь, [[Куратов Ӧльӧш Вань|Иван Куратов]] нима Государственнöй премияса лауреат.
+'''Торопов Иван Григорьевич ''' ([[коми кыв|коми]]ӧн '''Гриш Вань''', ([[1928]] вося [[27 моз|моз 27 лун]], [[Койгорт]] - [[2011 во]]ся [[21 кос му|косму 21]] лун, [[Сыктывкар]]) - [[Коми Республика]]са нимйöза гижысь, Коми Республикаса культураын нимöдана уджалысь, [[Куратов Ӧльӧш Вань|Иван Куратов]] нима Государственнöй премияса лауреат.
 
 ==Олöм туй==
 
