*Empty MediaWiki Message*

--- a/Коми_гижысьяс_анбур_серти.mw
+++ b/Коми_гижысьяс_анбур_серти.mw
@@ -508,7 +508,7 @@
 |[[Уляшов Олег Иванович]]	
 |1964	
 |-
-|[[Федоров Геннадий Александрович]] (Педь Гень) 	
+|[[Фёдоров Геннадий Александрович]] (Педь Гень) 	
 |1909–1990	
 |-
 |[[Фролов Николай Андрианович]] (Сук Парма)	
