*Empty MediaWiki Message*

--- a/Фёдоров_Геннадий_Александрович.mw
+++ b/Фёдоров_Геннадий_Александрович.mw
@@ -1,4 +1,4 @@
-'''Фёдоров Геннадий Александрович''' ([[1909]]–[[1991]]) – [[коми гижысь]], [[Куратов Ӧльӧш Вань|Иван Куратов]] нима Государственнöй премияса лауреат ([[1968]]), [[РСФСР-са культураын заслуженнӧй уджалысь]] ([[1969]]), [[Коми АССР-са народнӧй гижысь]] ([[1984]]).
+'''Фёдоров Геннадий Александрович''' ([[коми кыв|коми]]ӧн '''Педь Гень''', [[1909]]–[[1991]]) – [[коми гижысьяс анбур серти|коми гижысь]], [[Куратов Ӧльӧш Вань|Иван Куратов]] нима Государственнöй премияса лауреат ([[1968]]), [[РСФСР-са культураын заслуженнӧй уджалысь]] ([[1969]]), [[Коми АССР-са народнӧй гижысь]] ([[1984]]).
 
 ==Олан туй==
 * [[1909]], [[18 моз|моз тӧлысь 27 лун]] – чужис [[Вӧлӧгда губерния]]ын [[Усть-Сысольск уезд]]са [[Мылдiн]] [[вӧлӧсьт]]ын (ӧнi – [[Коми Республика]]са [[Мылдiн]] [[сикт]]).
