*Empty MediaWiki Message*

--- a/Юшков_Геннадий_Анатольевич.mw
+++ b/Юшков_Геннадий_Анатольевич.mw
@@ -1,7 +1,7 @@
  
 [[Файл:Юшков Г.А.jpg|250 px|right|thumb|Юшков Геннадий Анатольевич (1932-2009) – коми гижысь]]
 
-'''Юшков Геннадий Анатольевич''' (комиӧн '''Толь Гень''', [[1932]]–[[2009]]) – коми гижысь, [[Коми Республикаса народнӧй гижысь]] ([[1991]]), [[Россия Федерацияса культураын заслуженнӧй уджалысь]] ([[2000]]).
+'''Юшков Геннадий Анатольевич''' (комиӧн '''Толь Гень''', [[1932]]–[[2009]]) – [[коми гижысьяс анбур серти|коми гижысь]], [[Коми Республикаса народнӧй гижысь]] ([[1991]]), [[Россия Федерацияса культураын заслуженнӧй уджалысь]] ([[2000]]).
 
 == Олан туй ==
 * [[1932]], [[14 рака|рака тöлысь 14-öд]] лунö – чужис [[Сыктывдін район]]са [[Час сикт овмӧдчӧмин|Час]] сельсӧветувса [[Сiтбар (Сыктывдін район)|Сітбар]] грездын (ӧні [[Коми Республика]]са [[Сыктывдін район]]). 
