*Empty MediaWiki Message*

--- a/Чисталёв_Тима_Вень.mw
+++ b/Чисталёв_Тима_Вень.mw
@@ -1,7 +1,7 @@
 [[Файл:Чисталёв В.Т.jpg|250 px|right|thumb|Чисталёв Тима Вень (1890–1939) – коми гижысь, вуджӧдчысь, велӧдысь]]
 [[Файл:Чисталёв В.Т. 1.jpg|250 px|right|thumb|Чисталёв Тима Вень да небӧг]]
 
-'''Чисталёв Тима Вень''' ({{lang-ru|Чисталёв Вениамин Тимофеевич}}) ([[1890 во|1890]]–[[1939]]) – [[коми гижысь]], коми литератураса классик, вуджöдчысь, велöдысь.
+'''Тима Вень''' ({{lang-ru|Чисталёв Вениамин Тимофеевич}}) ([[1890 во|1890]]–[[1939]]) – нималана [[коми гижысьяс анбур серти|коми гижысь]], поэт, [[коми литература]]са классик, вуджöдчысь, велöдысь.
 
 ==Олан туй==
 * [[1890]], [[20 йирым|йирым 20 лун]] – чужис [[Вӧлӧгда]] [[губерния]]ысь [[Усть-Сысольск]] [[уезд]]са [[Помöсдiн]] [[вӧлӧсьт]]ын (ӧні – [[Коми республика]]ысь [[Кулӧмдін район]]са [[Помӧсдін (Кулӧмдін район)|Помӧсдін]] [[сикт]]).
