--- a/Лыткин_Илля_Вась.mw
+++ b/Лыткин_Илля_Вась.mw
@@ -1,29 +1,1 @@
-[[Файл:Lytkin.jpg|thumb|300px|Лыткин Илля Вась]]
-'''Лыткин Илля Вась''' ([[Роч кыв|рочöн]] '''Лыткин Василий Ильич''') (27.12.1895 – 27.08.1981) - нималана коми кывтуялысь, профессор, гижысь. 
-
-Чужис Усть–Сысольск бердса (öнi [[Сыктывкар]]) Тентюков грездын. Велöдчис карса училищеын, сэсся [[Тотьма|Тотьмаын]] велöдысьясöс дасьтан семинарияын. Вöлi сар армияын, тышкасис медводдза мирöвöй да гражданскöй войнаяс вылын. 
-
-1925–öд воö помалiс [[Мöскуаса университет|Мöскуаса университетын]] филология факультет, 1929–öд воö аспирантура. Велöдiс рöдвуж кывъяс [[Финляндия|Финляндияын]], [[Германия|Германияын]] да [[Венгрия|Венгрияын]]. 1927–öд воö [[Будапештса университет|Будапештса университетын]] велöдчöм бöрын лои философия наукаясса докторöн. 1930–1933–öд воясö уджалiс МГУ–ын доцентöн, вöлi велöдысьöн [[Коми пединститут|Коми пединститутын]]. 
-
-1933–öд воö В.Лыткинöс подувтöг мыждiсны да йöртiсны дзескыдiнö вит во кежлö. Пукалiс Ылi Асыввылын. Илля Васьлысь нимсö бöр бергöдiсны коми йöзлы 1958–öд воö.
-
-Уна во чöж В.И.Лыткин нуöдiс ыджыд научно–педагогическöй удж миян странаса вузъясын. 1946–öд воын "Древнепермскöй кыв да пермскöй кывъяслöн историческöй грамматика" уджысь сылы сетiсны филология докторлысь ученöй степень. Дас воысь унджык веськöдлiс СССР–са наукаяс Академияын языкознание институтса фин–йöгра кывъяс секторöн. Ыджыд пай пуктiс куратоведениеö. 
-
-Таысь кындзи Илля Вась – коми поэт. Уна гижис челядьлы. Коми литератураын нэмъяс чöж кутас овны сылöн "Мунöны" поэмаыс. СССР–са гижысь котырын 1958–öд восянь.
-
-В.И.Лыткин – Коми АССР–са И.А.Куратов нима Государственнöй премияа лауреат, РСФСР–са да Коми АССР–са наука да техника юкöнын заслуженной уджалысь.
-
-Кулiс [[Мöскуа|Мöскуаын]], дзебисны [[Сыктывкар|Сыктывкарын]].
-
-== Ыстӧдъяс ==
-* [http://bse.sci-lib.com/article071848.html| Большая Советская Энциклопедия (БСЭ)]
-* [http://foto11.com/komi/writer/lytkin.php Традиционная культура Коми Зырян] 
-
-[[Категория:Персоналия:Коми]]
-[[Категория:Персоналия анбурӧд]]
-
-[[fi:Vasili Lytkin]]
-[[hu:Vaszilij Iljics Litkin]]
-[[ru:Лыткин, Василий Ильич]]
-[[udm:Лыткин, Василий Ильич]]
-[[uk:Литкін Василь Ілліч]]
+#перенаправление [[Илля Вась]]
