*Empty MediaWiki Message*

--- a/Коми_гижысьяс_анбур_серти.mw
+++ b/Коми_гижысьяс_анбур_серти.mw
@@ -229,7 +229,7 @@
 |[[Лужиков Александр Михайлович]]	
 |1964	
 |-
-|[[Лыткин Василий Ильич]] (Илля Вась)	
+|'''Лыткин Василий Ильич''' ([[Илля Вась]])	
 |1895–1981	
 |-
 |[[Лыткин Георгий Степанович]] (Ёгуш)	
@@ -409,7 +409,7 @@
 |[[Рочев Яков Митрофанович]] (Митрук Як)  	
 |1909–1977	
 |-
-|[[Савин Виктор Алексеевич]] (Нёбдінса Виттор) 	
+|'''Савин Виктор Алексеевич''' ([[Нёбдінса Виттор]]) 	
 |1888-1943	
 |-
 |[[Сажин Иван Иванович]] (Ичӧт Иван)  	
@@ -526,7 +526,7 @@
 |[[Чеусов Алексей Александрович]] 	
 |1882-1940	
 |-
-|[[Чисталев Вениамин Тимофеевич]] (Тима Вень) 	
+|'''Чисталев Вениамин Тимофеевич''' ([[Тима Вень]]) 	
 |1890-1939	
 |-
 |[[Чисталёв Иона Тимофеевич]] (Жан Морос)	
