*Empty MediaWiki Message*

--- a/Коми_гижысьяс_анбур_серти.mw
+++ b/Коми_гижысьяс_анбур_серти.mw
@@ -1,9 +1,9 @@
-'''Коми гижысьяс анбур серти''' – кык лыддьӧг, кытчӧ тэчӧмӧсь алфавит серти нимъяс [[коми йӧз|коми]] йӧзыслӧн, кодъяс пуктісны да пуктӧны пай [[коми литература]]ӧ да журналистикаӧ.
+'''Коми гижысьяс анбур серти''' – кык лыддьӧг, кытчӧ алфавит серти тэчӧма [[коми йӧз|коми]] йӧзлысь нимъяс, кодъяс пуктісны да пуктӧны пай [[коми литература]]ӧ да журналистикаӧ.
 
-Медводзза лыддьӧгас [[Коми Республика]]са коми гижысьяс, мӧдас [[перым коми литература|перым коми]] гижысьяс.
+Медводзза лыддьӧгас [[Коми Республика]]са [[коми гижысь]]яс, мӧдас [[Перым Коми кытш]]са [[коми гижысь]]яс.
 
 ==Коми Республикаса коми гижысьяс==
-Коми Республикаса гижысьяс гижӧны [[Коми кыв|комиӧн]] миян ног, сыктывкарса коми кыв стандарт серти.
+Коми Республикаса гижысьяс гижӧны [[Коми кыв|комиӧн]].
 
 {| border="1" cellpadding="4" cellspacing="0" style="border:1px solid #aaa; border-collapse:collapse"
 |- bgcolor="#ECECEC"
@@ -31,7 +31,7 @@
 |[[Бабин Вячеслав Леонидович]] 	
 |1960	
 |-
-|[[Баженова Ольга]]	
+|[[Баженова Ольга Николаевна]]	
 |1992	
 |-
 |[[Безносиков Владимир Иванович]]	
@@ -53,7 +53,7 @@
 |1956	
 |-
 |[[Вавилин Иван Михайлович]] (Баярса Иван)	
-|1911	
+|1911-1975
 |-
 |[[Ванеев Альберт Егорович]]	
 |1933–2001	
@@ -64,7 +64,7 @@
 |[[Власов Василий Иванович]]	
 |1916–1986	
 |-
-|[[Втюрина Людмила]] (Зарни Люся)	
+|[[Втюрина Людмила Зарниевна]] (Зарни Люся)	
 |?	
 |-
 |[[Вурдов Алексей Иванович]] 	
@@ -73,7 +73,7 @@
 |[[Габов Александр Григорьевич]] (Гриш Саш)	
 |1912-1941	
 |-
-|[[Говорухина Светлана]]	
+|[[Говорухина Светлана Ювенальевна]]	
 |1959	
 |-
 |[[Гордеева Антонина]]	
@@ -214,7 +214,7 @@
 |[[Липин Петр Васильевич]]	
 |1932	
 |-
-|[[Лобанова Евгения]]	
+|[[Лобанова Евгения Михайловна]]	
 |1989	
 |-
 |[[Логинов Михаил]]	
@@ -227,7 +227,7 @@
 |1930	
 |-
 |[[Лужиков Александр Михайлович]]	
-|1964	
+|1964-2006
 |-
 |'''Лыткин Василий Ильич''' ([[Илля Вась]])	
 |1895–1981	
@@ -272,7 +272,10 @@
 |1952	
 |-
 |[[Некрасов Александр Иванович]] (Гамса)	
-|1931	
+|1931
+|-
+|[[Нестерова Алёна Николаевна]] (Алёна Старцева)	
+|1984
 |-
 |[[Никулин Николай Егорович]]	
 |1932-1993	
@@ -319,7 +322,7 @@
 |[[Подоров Иван Гаврилович]] (Гаврил Иван)	
 |1906-1942	
 |-
-|[[Полугрудов Алексей]]	
+|[[Полугрудов Алексей Владимирович]]	
 |1976	
 |-
 |[[Попов Алексей Вячеславович]] (Висер Öль, Камай Олеш)	
@@ -395,7 +398,7 @@
 |1820-1901	
 |-
 |[[Рассыхаев Василий Николаевич]]	
-|1922	
+|1922-1990
 |-
 |[[Рассыхаев Иван Степанович]] (Степан Иван)	
 |1878-1968	
@@ -476,13 +479,13 @@
 |1908-1941	
 |-
 |[[Торлопов Георгий Иванович]] (Ивö Ёгор),  	
-|1913	
+|1913
 |-
 |[[Торопов Василий Павлович]]	
 |1929	
 |-
 |[[Торопов Иван Григорьевич]]	
-|1928	
+|1928-2011
 |-
 |[[Третьяков Владислав Григорьевич]]	
 |1938	
@@ -551,7 +554,7 @@
 |1898–1942	
 |-
 |[[Шахов Пётр Федотович]] (Педот Петыр)	
-|1931	
+|1931-2006
 |-
 |[[Шеболкин Павел Андреевич]] (Выль Паш)	
 |1905-1963	
@@ -611,7 +614,7 @@
 
 
 ==Перым коми гижысьяс==
-Перем комиӧн гижӧны [[Перем дор]]са комияс. 
+Перым комиӧн гижӧны [[Перым Коми кытш]]са комияс. 
 
 {| border="1" cellpadding="4" cellspacing="0" style="border:1px solid #aaa; border-collapse:collapse"
 |- bgcolor="#ECECEC"
@@ -657,7 +660,7 @@
 | style="text-align:left;" |Вавилин Вл. 
 | align="right" | ????
 |-
-| style="text-align:left;" |[[Вавилин, Михаил Дмитриевич|Вавилин Михаил Дмитриевич]] 
+| style="text-align:left;" |[[Вавилин Михаил Дмитриевич]] 
 | align="right" | 1921-1992
 |-
 | style="text-align:left;" |[[Гагарин Иван Дмитриевич]] 
@@ -936,10 +939,10 @@
 |}
 
 ==Ӧшмӧсъяс==
-* [[Мартынов Валерий Иванович|Мартынов В. И.]] ''Литераторы земли Коми : биобиблиограф. словарь справочник''. – Сыктывкар: Эском, 2000
-*''Писатели Коми : биобиблиогр.словарь'' / Науч.ред.[[Дёмин Владимир Николаевич|В. Н. Демин]];Нац.Б-ка Респ.Коми,коми науч.центр УрО РАН,Лит.-мемориал.музей И.Куратова. – Сыктывкар : [б. и.], 1996. Т.I : А-Л. - 374с. : портр. 
-*''Писатели Коми : биобиблиограф. словарь'' : т. 2, М-Я. – Сыктывкар : 2001
-*''Писатели Коми АССР''. Сыктывкар, 1970. 
+* [[Мартынов Валерий Иванович|Мартынов В. И.]] ''Литераторы земли Коми: биобиблиограф. словарь справочник''. – [[Сыктывкар]]: [[Эскӧм (небӧг лэдзанін)|Эскӧм]], [[2000]].
+*''Писатели Коми: биобиблиогр.словарь'' / Науч.ред. [[Дёмин Владимир Николаевич|В.Н. Демин]]; Нац. Б-ка Респ. Коми, Коми науч. центр УрО РАН, Лит.-мемориал. музей И.Куратова. – [[Сыктывкар]]: [б. и.], [[1996]]. Т.I : А-Л. - 374 с.: портр.
+*''Писатели Коми: биобиблиограф. словарь'': Т. 2. М-Я. – [[Сыктывкар]], [[2001]].
+*''Писатели Коми АССР''. Сыктывкар, 1970.
 
 ==Ыстӧдъяс==
 
