*Empty MediaWiki Message*

--- a/Коми_гижысьяс_анбур_серти.mw
+++ b/Коми_гижысьяс_анбур_серти.mw
@@ -1,4 +1,4 @@
-'''Коми гижысьяс анбур серти''' – кык лыддьӧг, кытчӧ алфавит серти тэчӧма [[коми йӧз|коми]] йӧзлысь нимъяс, кодъяс пуктісны да пуктӧны пай [[коми литература]]ӧ да журналистикаӧ.
+'''Коми гижысьяс анбур серти''' – кык лыддьӧг, кытчӧ алфавит серти нимъяссö тэчӧма [[коми йӧз|коми]] йӧзлысь, кодъяс пуктісны да пуктӧны пай [[коми литература]]ӧ да журналистикаӧ.
 
 Медводзза лыддьӧгас [[Коми Республика]]са [[коми гижысь]]яс, мӧдас [[Перым Коми кытш]]са [[коми гижысь]]яс.
 
@@ -65,7 +65,7 @@
 |1916–1986	
 |-
 |[[Втюрина Людмила Зарниевна]] (Зарни Люся)	
-|?	
+|1964	
 |-
 |[[Вурдов Алексей Иванович]] 	
 |1956	
@@ -109,7 +109,7 @@
 |[[Ельцова Елена Власовна]] (Алёна Ельцова)  	
 |1979	
 |-
-|[[Ермолин Степан Иванович]] (Вань Степ), 	
+|[[Ермолин Степан Иванович]] (Вань Степ)
 |1914–1961	
 |-
 |[[Забоев Александр Степанович]] (Сан Антус)	
@@ -120,6 +120,9 @@
 |-
 |[[Иванова Валентина Васильевна]] 	
 |1956	
+|-
+|[[Игнатов Григорий Николаевич]]	
+|1974
 |-
 |[[Игнатов Михаил Иванович]]	
 |1933-1999	
@@ -142,8 +145,8 @@
 |[[Карманова Ксения]]	
 |1987	
 |-
-|[[Карманова Татьяна]]	
-|?	
+|[[Карманова Татьяна Михайловна]]	
+|1981
 |-
 |[[Кирпиченко Татьяна]]	
 |1990	
@@ -176,7 +179,7 @@
 |1907	
 |-
 |[[Кузнецов Николай Владимирович]]	
-|?	
+|1976
 |-
 |[[Куклина Раиса Ильинична]] (Илля Райö)	
 |1951	
@@ -275,7 +278,7 @@
 |1931
 |-
 |[[Нестерова Алёна Николаевна]] (Алёна Старцева)	
-|1984
+|1985
 |-
 |[[Никулин Николай Егорович]]	
 |1932-1993	
@@ -304,25 +307,25 @@
 |[[Павлова Анастасия]]	
 |1984	
 |-
-|[[Павлова Надежда Мисаиловна]] 	
+|[[Павлова Надежда Мисаиловна]]
 |1966	
 |-
-|[[Палкин Борис Александрович]]	
+|[[Палкин Борис Александрович]]
 |1930	
 |-
-|[[Палкин Леонид Николаевич]]	
+|[[Палкин Леонид Николаевич]]
 |1932	
 |-
-|[[Панюков Александр Александрович]] 	
+|[[Панюков Александр Александрович]] 
 |1936	
 |-
-|[[Парначев Александр Николаевич]]	
+|[[Парначев Александр Николаевич]]
 |1947	
 |-
-|[[Подоров Иван Гаврилович]] (Гаврил Иван)	
+|[[Подоров Иван Гаврилович]] (Гаврил Иван)
 |1906-1942	
 |-
-|[[Полугрудов Алексей Владимирович]]	
+|[[Полугрудов Алексей Владимирович]] (Лытун Лёш)
 |1976	
 |-
 |[[Попов Алексей Вячеславович]] (Висер Öль, Камай Олеш)	
@@ -346,7 +349,7 @@
 |[[Попов Полиевкт Павлович]] (П. Мезенин)	
 |1912-1958	
 |-
-|[[Попов Прокопий Спиридонович]]  (Спира Прокö)	
+|[[Попов Прокопий Спиридонович]] (Спира Прокö)	
 |1908–1979	
 |-
 |[[Попов Серафим Алексеевич]] (Öльöш Сим)	
@@ -377,7 +380,7 @@
 |1919-1985	
 |-
 |[[Пылаева Соломония Васильевна]]	
-|1930	
+|1930-
 |-
 |[[Пыстин Илья Иванович]]  (Иливапыс)  	
 |1907–1951	
@@ -449,7 +452,7 @@
 |1884-1925	
 |-
 |[[Тарабукин Андрей Степанович]]	
-|1936	
+|1936-1977
 |-
 |[[Тарабукин Иван Иванович]]	
 |1902-1980	
@@ -473,16 +476,16 @@
 |1919–1986	
 |-
 |[[Тимушев Эдуард Алексеевич]]  	
-|1962–2006	
+|1962–2006
 |-
-|[[Титов Иван Павлович]]  (Тит Паш Вань, И.Лучев)	
+|[[Титов Иван Павлович]] (Тит Паш Вань, И.Лучев)	
 |1908-1941	
 |-
-|[[Торлопов Георгий Иванович]] (Ивö Ёгор),  	
+|[[Торлопов Георгий Иванович]] (Ивö Ёгор)
 |1913
 |-
 |[[Торопов Василий Павлович]]	
-|1929	
+|1929-2006
 |-
 |[[Торопов Иван Григорьевич]]	
 |1928-2011
@@ -506,7 +509,7 @@
 |1946	
 |-
 |[[Уляшев Игорь Иванович]]	
-|1967	
+|1967-2005
 |-
 |[[Уляшов Олег Иванович]]	
 |1964	
@@ -517,8 +520,8 @@
 |[[Фролов Николай Андрианович]] (Сук Парма)	
 |1909–1987	
 |-
-|[[Хатанзейский Г.Ф. ]]	
-|?	
+|[[Хатанзейский Григорий Фёдорович]]	
+|1977
 |-
 |[[Худяев Иван Ефимович]] (Кос Кабыр) 	
 |1902-1933	
@@ -578,7 +581,7 @@
 |1954	
 |-
 |[[Шомысова Алёна]]	
-|1986	
+|1986
 |-
 |[[Шомысова Анастасия Александровна]]	
 |1981	
