*Empty MediaWiki Message*

--- a/Лунвыв_Судан.mw
+++ b/Лунвыв_Судан.mw
@@ -9,7 +9,7 @@
 <!-- |Аудио= -->
 |Веськӧдлан ног=[[Республика]]
 <!-- |Каналан эскӧм= -->
-|Мусерпас=Sudan Sudan (orthographic projection) highlighted.svg
+|Мусерпас=South Sudan in its region (undisputed).svg
 |Кыв=[[Англия кыв|Англия]]
 |Дата независимости/Канму панӧм=
 <!-- |Независимость от= -->
