*Empty MediaWiki Message*

--- a/Лодыгин_Василий_Григорьевич.mw
+++ b/Лодыгин_Василий_Григорьевич.mw
@@ -6,7 +6,7 @@
 * [[1947]], [[6 тӧв шӧр|тӧвшӧр тӧлысь 6 лун]] – чужис [[Коми АССР]]-ын (öнi – [[Коми Республика]]) [[Кулӧмдiн район]]са [[Дзоль (Кулӧмдін район)|Дзоль сельсовет]] улӧ пырысь [[Габов (Кулӧмдін район)|Габов]] [[грезд]]ын.
 * [[1966]] – помаліс [[Керчомья (Кулӧмдін район)|Керчомьяса]] шöр школа.
 * [[1966]]–[[1970]] – велӧдчис [[Коми канмуса педагогика институт]]ын филология факультетын.
-* [[1970]] – уджаліс [[роч кыв]] да литература велӧдчысьӧн [[Улыс Воч (Кулӧмдін район)|Улыс Вочса]] шӧр школаны.
+* [[1970]] – уджаліс [[роч кыв]] да литература велӧдысьӧн [[Улыс Воч (Кулӧмдін район)|Улыс Вочса]] шӧр школаын.
 * [[1971]]–[[1972]] – служитіс армияын. 
 * [[1972]] – радиовещаниеын уджалысь.
 * [[1973]] – уджалӧ [[Кулӧмдiн район]]са [[Парма гор (газет)|«Парма гор»]] газетын.
@@ -27,7 +27,7 @@
 
 Медшöр редактор «Парма гор» газетын.
 
-В. Г. Лодыгин вöлi сьыланкыв лöсьöдысьяслöн да асшöр шылад тэчысьяслöн «Василей» гаж котыртысьяс да пырöдчысьяс лыдын. «Василей» гажсö котыртiс [[Кулӧмдiн]] [[сикт]]ын  [[1994]] воын [[Гущин Василий Яковлевич|Василий Гущин]] да [[Чувьюров Василий Данилович|Василий Чувьюровкöд]] (Кузьнеч Вась) öтвылысь.
+В. Г. Лодыгин вöлi сьыланкыв лöсьöдысьяслöн да асшöр шылад тэчысьяслöн [[Василей (гаж)|«Василей»]] гаж котыртысьяс да пырöдчысьяс лыдын. «Василей» гажсö котыртiс [[Кулӧмдiн]] [[сикт]]ын  [[1994]] воын [[Гущин Василий Яковлевич|Василий Гущин]] да [[Чувьюров Василий Данилович|Василий Чувьюровкöд]] (Кузьнеч Вась) öтвылысь.
 
 == Небӧгъяс ==
 === Комиöн ===
@@ -54,7 +54,7 @@
 * Коми комсомоллысь премиа босьтысь ([[1976]])
 * [[Коми АССР-са культураын нималана уджалысь]] ([[1991]])
 * Коми Республикаса Правительстволысь премиа босьтысь ([[2006]])
-* [[Россияса культураын нималана уджалысь]] ([[2011 во]]) – культураын, печатьын уджысь да уна вося бур уджысь. [http://www.rkomispb.ru/news/1471/23/vasilij-lodygin-poluchil-nagradu.html]
+* [[Россияса культураын нималана уджалысь]] ([[2011 во]]) – культураын, печатьын да уна вося бур уджысь. [http://www.rkomispb.ru/news/1471/23/vasilij-lodygin-poluchil-nagradu.html]
 
 == Öшмöсъяс==
 * [http://www.nbrkomi.ru/kk/ust_kulom/literatura Коми Республикаса Национальнöй библиотека]
@@ -66,3 +66,5 @@
 [[Категория:Персоналия:Коми]]
 [[Категория:Персоналия анбурӧд]]
 [[Категория:Коми гижысь]]
+
+[[koi:Лодыгин Василий Григорьевич]]
