*Empty MediaWiki Message*

--- a/1825-ӧд_во.mw
+++ b/1825-ӧд_во.mw
@@ -1,10 +1,13 @@
-'''1825 во''' – абу [[кассяна во]], [[Григорий календар]] серти пансьӧ [[субӧта]]сянь.
+{{Вояс|1825}}
+'''1825 во''' – [[Григорий календар]] серти абу [[кассяна во]], пансьӧ [[субӧта]]сянь.
 
 == Лоӧмторъяс ==
 == Чужисны ==
 * [[перым коми кыв]] туялысь [[Рогов Ӧврам Микӧл|Николай Рогов]] (куліс [[1905]]).
 == Кулісны ==
 == Ӧшмӧс==
+
+[[Категория:1825 во]]
 
 [[af:1825]]
 [[am:1825 እ.ኤ.አ.]]
