*Empty MediaWiki Message*

--- a/Коми_гижысьяс_анбур_серти.mw
+++ b/Коми_гижысьяс_анбур_серти.mw
@@ -139,7 +139,7 @@
 |[[Истомин Иван Григорьевич]] (Сибырак Иван)	
 |1917-1988	
 |-
-|[[Каракчиев Анатолий]]	
+|[[Каракчиев Валерий]]	
 |?	
 |-
 |[[Карманова Ксения]]	
