*Empty MediaWiki Message*

--- a/Фёдоров_Геннадий_Александрович.mw
+++ b/Фёдоров_Геннадий_Александрович.mw
@@ -9,6 +9,7 @@
 * [[1991]], [[2 тӧв шӧр|тӧвшӧр тӧлысь 2 лун]] – кувсис [[Сыктывкар]]ын, дзебӧма карса [[Шӧр шойна (Сыктывкар)|Шӧр шойна]] вылӧ.
 
 == Гижан удж==
+Г.Федоров гижӧдъяссӧ заводитіс йӧзӧдны 1928–ӧд воӧ "[[Ордым (журнал)|Ордым]]" журналын. А медводдза "Зелля" небӧгыс, нёль акта пьеса, петіс 1931–ӧд воын. "[[Сиктса асыв]]", "Колхозницаяс", "[[Трактористка Василиса]]" повесьтьясын гижысьыс серпасалӧ коми сиктлысь вежсьӧмсӧ коллективизация воясӧ. Паськыда тӧдса Г.Федоровлӧн 1960–1980–ӧд воясӧ гижӧм историческӧй романъясыс. "[[Кыа петіӧн (роман)|Кыа петіӧн]]" романын да "[[Востым (роман)|Востым]]", "[[Чужан мусянь ылын (роман)|Чужан мусянь ылын]]", "[[Эзысь сюра кӧр (роман)|Эзысь сюра кӧр]]" трилогияын авторыс висьталӧ гражданскӧй войнаса героиня [[Каликова Домна|Домна Каликова]] да медводдза коми поэт [[Куратов Ӧльӧш Вань|И.А.Куратов]]лӧн олӧм йылысь.
 
 == Небӧгъяс ==
 === Комиӧн ===
@@ -19,6 +20,8 @@
 * История Коми литературы: В 3-х т.  / Под ред. [[Ванеев, Альберт Егорович|А.Е. Ванеева]], [[Мартынов Валерий Иванович|В.И. Мартынова]]. – [[Сыктывкар]], [[1981]]. – Т. 3
 * [[Ванеева Ирина Михайловна|Ванеева И.]] ''Фёдоров Геннадий Александрович'' // Республика Коми: Энциклопедия: В 3-х т. – [[Сыктывкар]]: [[Коми небöг лэдзанiн|Коми кн. изд-во]], [[2000]]. – Т. 3. – С. 240.
 * [http://www.nbrkomi.ru/kk/base/raiony/troick/literatura/pisateli_i_poety/imya_razdela/ Коми Республикаса Национальнӧй библиотека]
+* [http://foto11.com/komi/writer/fedorov.php Коми культура йылысь foto11.com сайт]
+
 [[Категория:Персоналия:Коми‎]]
 [[Категория:Коми гижысь]]
 
