*Empty MediaWiki Message*

--- a/Васяр.mw
+++ b/Васяр.mw
@@ -1,6 +1,7 @@
 [[Файл:WaterPolo.JPG|thumb|300px]]
 '''Васяр''' ({{Lang-ru|Водное поло}}) - тайӧ командалӧн вид чожмӧглӧн. Мог - йортны мячсӧ воротаӧ.
-
+Один игрок каждой команды выступает в роли голкипера. Голкипер (вратарь) — единственный игрок команды, который может трогать мяч обеими руками. Голкипер в отличие от других игроков должен всегда оставаться на своей половине поля.
+[[Файл:NewWaterPoloBall.JPG|thumb|Ну а это такой мячик, он еще на волейбольный похож)]]
 [[Категория:Чожмӧг]]
 
 [[af:Waterpolo]]
