--- a/Васяр.mw
+++ b/Васяр.mw
@@ -1,7 +1,6 @@
 [[Файл:WaterPolo.JPG|thumb|300px]]
-'''Васяр''' ({{Lang-ru|Водное поло}}) - тайӧ командалӧн вид чожмӧглӧн. Мог - йортны мячсӧ воротаӧ.
-Один игрок каждой команды выступает в роли голкипера. Голкипер (вратарь) — единственный игрок команды, который может трогать мяч обеими руками. Голкипер в отличие от других игроков должен всегда оставаться на своей половине поля.
-[[Файл:NewWaterPoloBall.JPG|thumb|Ну а это такой мячик, он еще на волейбольный похож)]]
+'''Васяр''' ({{Lang-ru|Водное поло}}) — тайӧ кык котырлӧн чожмӧг ворсӧм, кӧні медшӧр могыс — шыбитны мачсӧ мӧд котырлӧн воротаӧ. Быд котырын эм ворота видзысь (либӧ голкипер). Голкипер (вратар) — котырын дзик ӧти ворсысь, коді вермӧм мачсӧ кутны кыкнан кинас. Голкиперлы век колӧ лоны ас му джынйын.
+[[Файл:NewWaterPoloBall.JPG|thumb|Васярысь ворӧм могысь мач)]]
 [[Категория:Чожмӧг]]
 
 [[af:Waterpolo]]
