*Empty MediaWiki Message*

--- a/Васяр.mw
+++ b/Васяр.mw
@@ -1,6 +1,6 @@
 [[Файл:WaterPolo.JPG|thumb|300px]]
 '''Васяр''' ({{Lang-ru|Водное поло}}) — тайӧ кык котырлӧн чожмӧг ворсӧм, кӧні медшӧр могыс — шыбитны мачсӧ мӧд котырлӧн воротаӧ. Быд котырын эм ворота видзысь (либӧ голкипер). Голкипер (вратар) — котырын дзик ӧти ворсысь, коді вермӧм мачсӧ кутны кыкнан кинас. Голкиперлы век колӧ лоны ас му джынйын.
-[[Файл:NewWaterPoloBall.JPG|thumb|Васярысь ворӧм могысь мач)]]
+[[Файл:NewWaterPoloBall.JPG|thumb|Васярысь ворсӧм могысь мач]]
 [[Категория:Чожмӧг]]
 
 [[af:Waterpolo]]
