*Empty MediaWiki Message*

--- a/Комиын_СССР-са_геройяс.mw
+++ b/Комиын_СССР-са_геройяс.mw
@@ -183,4 +183,4 @@
 * [http://www.warheroes.ru «Герои страны» проект]
 * История Коми с древнейших времён до конца XX века. – [[Сыктывкар]]: [[Коми небöг лэдзанiн]], [[2004]]. – Т. 2.
 
-[[Категория:Персоналия:Коми]]
+[[Категория:Комиын СССР-са геройяс]]
