*Empty MediaWiki Message*

--- a/Комиын_СССР-са_геройяс.mw
+++ b/Комиын_СССР-са_геройяс.mw
@@ -177,7 +177,7 @@
 |}
 
 == Видзӧдӧй сідзжӧ ==
-* [[Куим тшупӧда Слава ордена кавалеръяс]]
+* [[Комиын Слава ордена тыр кавалеръяс]]
 
 == Ӧшмӧсъяс ==
 * [http://www.warheroes.ru «Герои страны» проект]
