*Empty MediaWiki Message*

--- a/Нёбдінса_Виттор.mw
+++ b/Нёбдінса_Виттор.mw
@@ -1,14 +1,74 @@
 [[Изображение:Savin.jpg|thumb|300px|]]
-'''Нёбдiнса Виттор''' (збыльвывса ним '''Ӧльӧш Виттор''', [[роч кыв|роч]]ӧн '''Савин Виктор Алексеевич''', 21.11. [[1888]] — 11.08. [[1943]] — нималана [[коми гижысьяс анбур серти|коми гижысь]], поэт, [[коми литература]]са классик.) 
+'''Нёбдiнса Виттор''' (збыльвывса ним '''Ӧльӧш Виттор''', [[роч кыв|роч]]ӧн '''Савин Виктор Алексеевич''', 21.11. [[1888]] — 11.08. [[1943]]) — нималана [[коми гижысьяс анбур серти|коми гижысь]], поэт, [[коми литература]]са классик. 
 
-чужис [[Вöлöгда губерния|Вöлöгда губерниялöн]] [[Усть-Сысольск уезд|Усть–Сысольск уездса]] [[Небдiн]] сиктын (öнi [[Коми Республика|Коми Республикаса]] [[Кöрткерöс район]]). Велöдчис Небдiнса земскöй начальнöй училищеын, помалiс Дереваннöйса мöдöд тшупöда школа. Та бöрын писаралiс да письмö новлöдлiс, волi пес кералысьöн. Сизим во уджалiс [[Украина|Украинаса]] рудникъяс контораын.
+==Олан туй==
 
-В. Савин — выль коми литератураын подув пуктысьяс пиысь öти. Паськыда тöдсаöсь сылöн висьт "Луча" да очерк "Мусюр сайын". Кывбуръяс, сьыланкывъясыс, поэмаяс, "Коми море", "Сьöлöм сьылöм", "Югыд кодзув", "Тиюк" да "Сыктывкар" пыр мусаöсь коми йöзлы. Шензьöданаöн да кузь нэмаöн коми культураын лоины В.Савинлöн пьесаясыс "Шондi петiгöн дзоридз косьмис", "Райын", "Инасьтöм лов", "Кулöмдiнса бунт".
+В.А.Савин чужис [[Вöлöгда губерния|Вöлöгда губерниялöн]] [[Усть-Сысольск уезд|Усть–Сысольск уездса]] [[Нёбдін]] сиктын (öнi [[Коми Республика|Коми Республикаса]] [[Кöрткерöс район]]). Велöдчис Небдiнса земскöй начальнöй училищеын, помалiс Дереваннöйса мöдöд тшупöда школа. Та бöрын писаралiс да письмö новлöдлiс, волi пес кералысьöн. Сизим во уджалiс [[Украина|Украинаса]] рудникъяс контораын.
 
-В. Савин — коми театрлы подув пуктысь. 1921–öд воö котыртiс медводдза театральнöй труппа "Сыкомтевчук" (Сыктывса коми театрын ворсысь чукöр), кодi 1930–öд воö лои КИППТ–öн. Тайö театр подув вылас 1936–öд воö воссис Коми национальнöй театр. В.Савин волi коми гижысь котырöс öтувтысьяс пиысь öтиöн, гижысь котырын 1934–öд восянь.
+Нёбдінса Виттор вöлi коми гижысь котырöс öтувтысьяс пиысь öтиöн, гижысь котырын 1934–öд восянь.
 
 1937–öд воын В. Савинöс подулавтöг мыжалiсны. Кулiс дзескыдiнын Ылi [[Сибир|Сибирын]] 1943–öд вося моз 11 лунö. 1955–öд воö сылысь нимсö бöр бергöдiсны коми йöзлы.
+
 Дзебаiниныс абу тöдса.
+
+==Журналист==
+
+==Поэт==
+Нёбдінса Витторлöн кывбуръяс, сьыланкывъясыс, поэмаяс, "Коми море", "Сьöлöм сьылöм", "Югыд кодзув", "Тиюк" да "Сыктывкар" пыр мусаöсь коми йöзлы. 
+
+==Прозаик==
+Нёбдінса Виттор — выль коми литератураын подув пуктысьяс пиысь öти. Паськыда тöдсаöсь сылöн висьт "Луча" да очерк "Мусюр сайын". 
+
+==Драматург==
+Нёбдінса Виттор — коми театрлы подув пуктысь. 1921–öд воö котыртiс медводдза театральнöй труппа "Сыкомтевчук" (Сыктывса коми театрын ворсысь чукöр), кодi 1930–öд воö лои КИППТ–öн. Тайö театр подув вылас 1936–öд воö воссис Коми национальнöй театр.
+
+Шензьöданаöн да кузь нэмаöн коми культураын лоины В.Савинлöн пьесаясыс "Шондi петiгöн дзоридз косьмис", "Райын", "Инасьтöм лов", "Кулöмдiнса бунт".
+
+==Небöгъяс==
+
+Нёбдінса Витторлöн небöгъяс вояс серти <ref> [http://www.nbrkomi.ru/page/1695 Коми Республикаись национальнöй библиотека]</ref>
+
+*''«Аркирей»: баллада''. - Сыктывкар, 1922. - 16 л. б. : серпас.; Сыктывкар: Коми кн. изд-во, 1965. - 16 л. б.: ил.  
+*''Райын: куим торъя теш''. – Усть-Сысольск: Коми книга лэдзанiн, 1922. - 39 л. б.  
+*''Шондi петiгöн дзоридз косьмис:'' 3 торъя ворсантор. - Сыктывдiнкар: Коми книга лэдзанiн, 1922. - 26 л. б. 
+*''Гора Омра: чукöра вистьталöм-сьылöм''. - Сыктывдiнкар: Коми книга лэдзанiн, 1924. – 16 л. б.  
+*''Гудрасьöм: öти торъя теш'': (лöсьöдöма Украинаса "Бывальщина" теш серти). -   Сыктывдiнкар: Коми нига лэдзанiн, 1924. - 19 л. б.  
+*''Сьылан - лыддянъяс''. – Сыктывкар: Коми нига лэдзанiн, 1924. - 114 л. б., портр.  
+*''Тшын: 3 торъя ворсантор''.   -   Сыктывкар: Коми кн. изд-во, 1924. - 71 л. б.  
+*Т''öдтöм туйöд: кöкъямыс торъя драма'': (лöсьöдöма П. Бессалько гижöд "Бессознательным путём" серти). – Сыктывдiн кар: Коми нига лэдзанiн, 1925. - 72 л. б.  
+*''Черань: 5 торъя драма'': (лöсьöдöма Чижовский гижöд "Его Величество Трифон" серти). - Сыктывдiн кар: Коми нига лэдзанiн, 1925. - 52 л. б.    
+*''Ныв "грек" шобöм: 3 торъя пьеса коми олöмысь''. - Сыктывкар: Коми нига лэдзанiн, 1926. - 45 л. б. 
+*''Инасьтöм лов: куим торъя теш: «Райын» пьесалöн 2-öд юкöн''. – Сыктывдiн кар: Коми нига лэдзанiн, 1927. - 50 л. б.   
+*''Луча: висьт-збыль'' / изд. Угор.-фин. отд. Центро-Совнацмена НКП РСФСР. -   Сыктывкар: Коми нига лэдзанiн, 1927. - 21   л. б.  
+*''Путкыльтчöм:   революция   драма:   5   торъя,   6   юкöна'': (лöсьöдöма Бессалько роман «Катастрофа» серти). - Сыктывдiн кар: Коми нига лэдзанiн, 1927. - 43 л. б.  
+*''Ва шыр: кык торъя теш.'' - Сыктывдiн кар: Коми нига лэдзанiн, 1928. - 35 л. б.  
+*''«Вабергач»: драма в 3-х д.'' - Сыктывдiн кар: Коми нига лэдзанiн, 1928. - 43 л. б. ; Сыктывкар: Коми кн. изд-во, 1982. - 368 л. б.: портр. 
+*''Кулöмдiнса бунт: збыль вöлöмтор йылысь пьеса: 3 юöна, 8 торъя''. - Сыктывкар: Коми нига лэдзанiн, 1928. - 55 л. б., портр.  
+*''Сырчик бöрся: кык торъя теш'': (лöсьöдöма «Во время затишья» нима нига серти). – Сыктывдiн кар: Коми нига лэдзанiн, 1928. - 32 л. б.  
+*''Знаменньö: куим торъя теш''. - Сыктывкар: Коми кн. изд-во, 1930. - 48 л. б.  
+*''Парма ныв: 4 торъя, 5 юкöна драма''. - Сыктывкар: Коми кн. изд-во, 1930. - 71 л. б.  
+*''Арт: öти торъя ворсантор''. - Сыктывкар: Коми кн. изд-во, 1931. - 44 л. б.  
+*''Гижöд чукöр: в 2-х т''. - Сыктывкар: Коми нига лэдзанiн, 1931-1932.  
+**Т. 1. - Сыктывкар, 1931. – 284 л. б.
+**Т. 2. - Сыктывкар, 1932. – 349 л. б.
+*''Моль: öти торъя кык серпаса ворсантор''. - Сыктывкар: Коми книга лэдзанiн, 1931. - 23 л. б.  
+*''Гижöд чукöр: в 2-х т''. Т. 1. - Сыктывкар: Коми нига лэдзанiн, 1931. - 284 л. б.  
+*''Сыктывкар. Жеребцовсянь Карпинскийöдз: поэма.'' - Сыктывкар: Коми госиздат, 1935. – 30 л. б.  
+*''100 коми сьыланкыв'' / собрал В. А. Савин - Сыктывкар: Коми ГИЗ, 1936. – 208 л. б.  
+*''Бöрйöм гижöдъяс'' / вступ. ст. И. Изъюрова. – Сыктывкар: Коми кн. изд-во, 1956. – 248 л. б.  
+*''Чужи-быдми   сьöд   вöр   шöрын:   челядьлы   кывбуръяс''   / водзкывсö гижис С. Морозов. - Сыктывкар: Коми кн. изд-во. - 40 л. б.: портр.  
+*''Пьесаяс'' / вступит. ст. Г. А. Фёдорова. - Сыктывкар: Коми кн. изд-во, 1959. - 184 л. б.  
+*''Кывбуръяс. Поэмаяс. Пьесаяс. Вистъяс. Очеркъяс'' / сост. С. Морозов. - Сыктывкар: Коми кн. изд-во, 1962. – 655 л. б., 1 л. портр.  
+*''Эжва дорын: кывбуръяс, вистъяс.'' - Сыктывкар: Коми кн. изд-во, 1976. – 88 л. б. 
+*''Сьöлöм сьылöм: кывбуръяс'' = Песня сердца: стихи / сост. Г. И. Торлопов. – Сыктывкар, 1978. - 24 л. б. (Коми отделение добровольного общества любителей книги РСФСР) ; сост. и вступ. ст. А. Ванеева. - Сыктывкар: Коми кн. изд-во, 1988. – 143 л. б.  
+*''Югыд кодзув: кывбуръяс, поэмаяс, ораторияяс, роч вылысь, роча-комиа да роч кывбуръяс'' / лöсьöдiс да водзкывсö гижис А. Е. Ванеев. - Сыктывкар: Коми кн. изд-во, 1980. - 304   л. б.: 1 л. портр.  
+*''Звени, моя парма: стихотворения, поэмы, пьесы, рассказы.'' - Сыктывкар: Коми кн. изд-во, 1983. - 256 с.
+*''Мусюр сайын: проза гижöдъяс'' / лöсьöдiс да примечаниеяссö гижис Г. И. Торлопов. - Сыктывкар: Коми кн. изд-во, 1985. - 368 л. б.  
+*''Гажöдчöй, кор томöсь: бöрйöм гижöдъяс'' / предисл. Г. И. Торлопова. - Сыктывкар: Коми кн. изд-во, 1998. - 334 л. б.
+*''Бöрйöм гижöдъяс. – Кывбуръяс, поэмаяс, висьтъяс, очеркъяс, пьесаяс''. = Избранное. – Сыктывкар: «Издательство «Милета», 2008. – 608 с.  
+
+==Ыстöгъяс==
+<references/>
 
 [[Категория:Персоналия:Коми]]
 [[Категория:Персоналия анбурӧд]]
