*Empty MediaWiki Message*

--- a/Комиын_шылад_тэчысьяс.mw
+++ b/Комиын_шылад_тэчысьяс.mw
@@ -31,8 +31,8 @@
 |[[Абъячой]]
 |-
 |[[Горчаков Владимир Гениевич]]
-|[[1948]]–[[1993]]
-|[[Абъячой]]
+|[[1948]]–[[1998]]
+|[[Читаёв (Луздор район)|Читаёв]]
 |-
 |[[Горчаков Гений Дмитриевич]]
 |[[1927]]
@@ -43,7 +43,7 @@
 |[[Слудка (Луздор район)|Слудка]]
 |-
 |[[Дехтярёв Георгий Николаевич]]
-|[[1921]]–?
+|[[1921]]
 |[[Одесса]]
 |-
 |[[Игнатов Григорий Николаевич]]
