*Empty MediaWiki Message*

--- a/Коми_гижысьяс_анбур_серти.mw
+++ b/Коми_гижысьяс_анбур_серти.mw
@@ -328,6 +328,9 @@
 |[[Попов Алексей Вячеславович]] (Висер Öль, Камай Олеш)	
 |1950	
 |-
+|[[Попов Андрей Алексеевич]] (Ӧльӧк Ӧндрей)  	
+|1909-1939	
+|-
 |[[Попов Андрей Ефимович]]  	
 |1816-1865	
 |-
