*Empty MediaWiki Message*

--- a/Коми_гижысьяс_анбур_серти.mw
+++ b/Коми_гижысьяс_анбур_серти.mw
@@ -244,6 +244,9 @@
 |[[Маегов Афанасий Андреевич]] (Варыш)  	
 |1893–1942   	
 |-
+|[[Малафеев Павел Степанович]]	
+|1907-?	
+|-
 |[[Мальцев Александр Михайлович]]	
 |1924-1989	
 |-
