*Empty MediaWiki Message*

--- a/Коми_гижысьяс_анбур_серти.mw
+++ b/Коми_гижысьяс_анбур_серти.mw
@@ -73,6 +73,9 @@
 |[[Габов Александр Григорьевич]] (Гриш Саш)	
 |1912-1941	
 |-
+|[[Габов Иван Николаевич]] (Иван Комсомольскӧй)	
+|1914-1941	
+|-
 |[[Говорухина Светлана Ювенальевна]]	
 |1959	
 |-
